@@ -1,63 +1,70 @@
 buildscript {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven { url "https://www.jetbrains.com/intellij-repository/releases/" }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        mavenLocal()
+        maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
+        google()
         gradlePluginPortal()
-    }
-
-    dependencies {
+        mavenLocal()
     }
 }
 
 plugins {
-    id 'idea'
-    //0.4.21
-    id 'org.jetbrains.intellij' version '0.7.2'
+    id 'java'
+    id 'org.jetbrains.intellij' version '1.13.2'
+    // Gradle Changelog Plugin
+    id 'org.jetbrains.changelog' version "1.3.1"
+    // Gradle Qodana Plugin
+    id 'org.jetbrains.qodana' version "0.1.13"
 }
 
-//2.1 插件配置
-apply plugin: 'org.jetbrains.intellij'
-apply plugin: 'idea'
-apply plugin: 'java'
+allprojects {
+    repositories {
+        maven { url "https://www.jetbrains.com/intellij-repository/releases/" }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        mavenCentral()
+        google()
+        gradlePluginPortal()
+        mavenLocal()
+    }
+}
 
 group 'com.linkkou'
-version '2.2.3'
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-repositories {
-    mavenCentral()
-}
+version '3.0.0'
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'org.jetbrains:annotations:24.0.1'
 }
 
+/*https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions*/
 intellij {
-    pluginName 'TreeInfotip'
+    pluginName = 'TreeInfotip'
     // 开发环境运行时使用的版本
-    version '2020.2'
+    //version = '2022.3.2'
     //沙箱目录位置，用于保存IDEA的设置，默认在build文件下面，防止clean，放在根目录下。
-    sandboxDirectory = "${rootProject.rootDir}/idea-sandbox"
-    type 'IU'
+    sandboxDir = "${rootProject.rootDir}/idea-sandbox"
+    type = 'IU'
     // 依赖的插件
     //plugins = ['DatabaseTools', 'Velocity']
     //Disables updating since-build attribute in plugin.xml
-    updateSinceUntilBuild false
-    downloadSources false
-    localPath '/Applications/IntelliJ IDEA.app'
-    //localPath '/Applications/WebStorm.app'
+    updateSinceUntilBuild = false
+    downloadSources = false
+    //localPath '/Applications/IntelliJ IDEA.app'
+    localPath = '/Applications/WebStorm.app/Contents'
 }
 
+runIde {
+    jvmArgs = [
+            "-javaagent:/Applications/jetbra/fineagent.jar=jetbrains",
+            "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED"]
+}
 
 patchPluginXml {
 
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
 }
